.provarCaches/00D410000011HE0EAM/objects/rstk__supitem__c.object
<CustomObject>
    <description>supitem__c</description>
    <fields>
        <fullName>rstk__UN_No_Display__c</fullName>
        <formula>IF( !ISBLANK(rstk__supitem_unno__c) ,  TEXT(rstk__supitem_unno__c) , &apos;&apos;)</formula>
        <inlineHelpText>The UN Number defining the Hazard Class. If Proper Shipping Name, Hazard Class, Sub Risk Class and Packing Group has already be established for this UN Number, values will default but can be overridden.</inlineHelpText>
        <label>UN No (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__supitem_div__r.rstk__sydiv_div__c &amp; &quot;_&quot; &amp; rstk__supitem_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__supitem_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_barcodetext__c</fullName>
        <inlineHelpText>Text that will be used on barcode. Value is defaulted to the WMS Part Number but can be changed.</inlineHelpText>
        <label>Barcode Text for Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_batchqtyhold__c</fullName>
        <inlineHelpText>Yes or No.  Is a quantity of the product to be held for inspection upon receipt?</inlineHelpText>
        <label>Batch Quality Hold on Arrival</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_chemicalcode__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Chemical Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_contact__c</fullName>
        <inlineHelpText>The contact name for the return of receptacles.</inlineHelpText>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_contactphone__c</fullName>
        <inlineHelpText>The phone number of the contact for the return of receptacles.</inlineHelpText>
        <label>Contact Phone Number:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_countryorigin__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>A valid country from the Country Master table. Determines value automatically entered in next field regarding EU.</inlineHelpText>
        <label>Country of Origin</label>
        <referenceTo>rstk__sycountry__c</referenceTo>
        <relationshipLabel>Supplier Part Masters</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Has Been Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_desc__c</fullName>
        <inlineHelpText>The description associated with this WMS item.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_diptubecaptorqsetting__c</fullName>
        <inlineHelpText>The torque settings for the Dip Tube Cap expressed in foot/pounds.</inlineHelpText>
        <label>Dip Tube Cap Torque Setting</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_diptubeexchreqd__c</fullName>
        <inlineHelpText>Set to &apos;Yes&apos; if Dip Tube exchange or replacement needs to be ordered.  Otherwise set to &apos;No&apos;.</inlineHelpText>
        <label>Is Dip Tube Exchange required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_diptubepartno__c</fullName>
        <inlineHelpText>The part number identifier for the Dip Tube, provided by the Supplier.</inlineHelpText>
        <label>Dip Tube Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_diptubetorqsetting__c</fullName>
        <inlineHelpText>The torque settings for the Dip Tube expressed in foot/pounds.</inlineHelpText>
        <label>ZZZZZ Dip Tube Torque Settings (ft lbs)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_diptubetorque__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dip Tube Torque Settings</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_diptubetype__c</fullName>
        <inlineHelpText>The Dip Tube type.</inlineHelpText>
        <label>Type of Dip-Tube:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QC111</fullName>
                </value>
                <value>
                    <fullName>QC11</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Division for which this record applies.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Supplier Part Masters</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_ear99__c</fullName>
        <inlineHelpText>The applicable Export Control Classification Number.  This field is free-form but required.</inlineHelpText>
        <label>EAR99 - ECCN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_emptyrcptcurr__c</fullName>
        <inlineHelpText>This field is for when the currency differs from (USD)</inlineHelpText>
        <label>(Other) Receptacle Value Currency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_emptyrecptval__c</fullName>
        <inlineHelpText>The value of the empty receptacle in US Dollars.  This is a required field.</inlineHelpText>
        <label>Empty Receptacle Value (USD)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_etadiptubechkr__c</fullName>
        <inlineHelpText>Estimated date the Dip Tube key checker will be provided.</inlineHelpText>
        <label>ETA of Dip Tube Key Checker</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_etatorqadapter__c</fullName>
        <inlineHelpText>The estimated date for receiving the torque adapter.</inlineHelpText>
        <label>ETA of Torque Adaptor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_expdocalbreqd__c</fullName>
        <inlineHelpText>Set to &apos;Yes&apos; if export documents and labeling are required, otherwise set to &apos;No&apos;.</inlineHelpText>
        <label>Export Documents and Labeling Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_exporttariff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the applicable Tariff Code.</inlineHelpText>
        <label>US Export Tariff Code</label>
        <referenceTo>rstk__sytariff__c</referenceTo>
        <relationshipLabel>Supplier Part Masters</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The address of the Supplier&apos;s facility that this item will be sourced from.</inlineHelpText>
        <label>Supplier Facility</label>
        <referenceTo>rstk__povendpoaddr__c</referenceTo>
        <relationshipLabel>Supplier Part Masters</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_fromeu__c</fullName>
        <inlineHelpText>Based on how the &apos;Member of European Union&apos; is checked on the Country Master record for the Country of Origin,this field will be automatically set accordingly and cannot be overridden.</inlineHelpText>
        <label>Are Goods from EU Origin?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_getpckgserials__c</fullName>
        <inlineHelpText>Yes or No.  Record packaging (shipping) serial number?</inlineHelpText>
        <label>Get Packaging Serial Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_grossweight__c</fullName>
        <inlineHelpText>Receptacle Weight plus Net Item Weight expressed in kilograms.</inlineHelpText>
        <label>Gross Weight (kg)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_haveorings__c</fullName>
        <label>Have O-Rings Been Supplied</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_hazardous__c</fullName>
        <inlineHelpText>Set to &apos;Yes&apos; when considered hazardous. When set to &apos;Yes&apos;, the Hazardous tab fields are enabled for further information to be added pertaining to this item.</inlineHelpText>
        <label>Hazardous</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_hazclass__c</fullName>
        <inlineHelpText>The Hazard Class for this UN Number. If  included in UN Number table, will default to that value, but it can be overridden.</inlineHelpText>
        <label>Hazard Class</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Inventory Item Master associated with this record.</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Supplier Part Masters</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_ishelflife__c</fullName>
        <inlineHelpText>WMS&apos;s stated shelf-life (in days) for this item.</inlineHelpText>
        <label>Shelf Life</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_item__c</fullName>
        <inlineHelpText>The WMS Part Number for this item.</inlineHelpText>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_itemplanreview__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Planning Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_licensereqd__c</fullName>
        <inlineHelpText>If license is required, set to &apos;Yes&apos;, otherwise set to &apos;No&apos;.</inlineHelpText>
        <label>License Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_lotcontrolled__c</fullName>
        <inlineHelpText>Yes or No.  Is the batch or lot number to be recorded upon receipt of product?</inlineHelpText>
        <label>Batch/Lot Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_lowdoi__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lowest DOI Before Recovery</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_lowww__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Week of Lowest DOI</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_ltvend__c</fullName>
        <inlineHelpText>The lead time required by this Supplier to have this item ready to ship.</inlineHelpText>
        <label>Supplier Mfg Lead Time – Calendar Days</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_mqcs__c</fullName>
        <label>MQCS Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_netweight__c</fullName>
        <inlineHelpText>The item&apos;s weight expressed in kilograms.</inlineHelpText>
        <label>Net Item Weight (kg)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_numsdsuploads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SDS Upload Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_oktodeviate__c</fullName>
        <inlineHelpText>Set to &apos;Yes&apos; if temperature deviations are allowed, otherwise set to &apos;No&apos;.</inlineHelpText>
        <label>OK to Deviate From Standard Min/Max</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_oringfreq__c</fullName>
        <label>O Ring Replacement Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_oringldtime__c</fullName>
        <label>Advised Lead Time for Reordering O-Rings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_oringminstockqty__c</fullName>
        <label>Min Stock Qty for Reordering of O-Rings</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_oringreplfreq__c</fullName>
        <inlineHelpText>Frequency of O-ring replacement.</inlineHelpText>
        <label>ZZZZZZ_O Ring Replacement Frequency</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_oringtype__c</fullName>
        <label>O-Ring Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_packgroup__c</fullName>
        <inlineHelpText>The Packing Group for this UN Number. If included in the UN Number table record, it will default in this field, but it can be overridden. Valid values are None,  I, II or III.</inlineHelpText>
        <label>Packing Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Supplier from which this item will be procured.</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Supplier Part Masters</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_propershipname__c</fullName>
        <inlineHelpText>Defaults from UN Number table.  No over-ride allowed.</inlineHelpText>
        <label>Proper Shipping Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_qtydue__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty of Next Delivery</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_qtydueww__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Weeks of Deliveries</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_qtypercontainer__c</fullName>
        <inlineHelpText>The number of returned receptacles per container.</inlineHelpText>
        <label>Quantity per Container</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_qtyperpallet__c</fullName>
        <label>Quantity per Pallet</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_qtyperpckg__c</fullName>
        <label>Quantity per Package</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_receptfilluom__c</fullName>
        <inlineHelpText>The unit of measure of the contents of the returned receptacle.</inlineHelpText>
        <label>Receptacle Fill UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_receptfillvol__c</fullName>
        <inlineHelpText>The fill volume of the returned receptacle expressed in the Receptacle Fill UOM field value.</inlineHelpText>
        <label>Receptacle Fill Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recorderactionreqd__c</fullName>
        <inlineHelpText>Yes or No.  Is action required once recorder software has been downloaded?</inlineHelpText>
        <label>Action Reqd Once Recorder is Downloaded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_recorderaddress__c</fullName>
        <inlineHelpText>The return address to which the temperature recorders are to be returned.</inlineHelpText>
        <label>Customer Return Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recordercarrier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The carrier to be used to return temperature recorders.</inlineHelpText>
        <label>Carrier for Return of Temp Recorders</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Supplier Part Masters (Carrier for Return of Temp Recorders)</relationshipLabel>
        <relationshipName>supitems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recorderfrghtacct__c</fullName>
        <inlineHelpText>The freight account to be charged for the temperature recorders.</inlineHelpText>
        <label>Freight Account for Temp Recorders</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recorderretfreq__c</fullName>
        <inlineHelpText>The frequency returns will be processed (e.g., weekly, monthly, quarterly, yearly).</inlineHelpText>
        <label>Frequency of Returns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_recorderretfreqqty__c</fullName>
        <inlineHelpText>The frequency of returns quantities.</inlineHelpText>
        <label>Frequency of Returns - Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recptheight__c</fullName>
        <inlineHelpText>Receptacle height expressed in centimeters.</inlineHelpText>
        <label>Receptacle Height (cm)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recptlength__c</fullName>
        <inlineHelpText>Receptacle length expressed in centimeters.</inlineHelpText>
        <label>Receptacle Length (cm)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recptmfgloc__c</fullName>
        <inlineHelpText>The location address of where this receptacle was manufactured.</inlineHelpText>
        <label>Manufacturing Location of Receptacle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recptweight__c</fullName>
        <inlineHelpText>Receptacle weight expressed in kilograms.  Automatically calculated when Net Item Weight and Total Gross Weight are entered.</inlineHelpText>
        <label>Receptacle Weight (kg)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_recptwidth__c</fullName>
        <inlineHelpText>Receptacle width expressed in centimeters.</inlineHelpText>
        <label>Receptacle Width (cm)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_rejcomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reason for Rejection</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_replaceitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the part number being replaced if previous field is set to Yes.</inlineHelpText>
        <label>Part Number Being Replaced</label>
        <referenceTo>rstk__supitem__c</referenceTo>
        <relationshipLabel>Supplier Part Masters</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_replacement__c</fullName>
        <inlineHelpText>When set to &apos;Yes&apos;, Replacement Part Number is enabled and must be populated.</inlineHelpText>
        <label>Does This Replace an Existing Part?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_residualpct__c</fullName>
        <inlineHelpText>The percentage value (expressed as a whole number) of the expected residual amount of product in the returned receptacle.</inlineHelpText>
        <label>Expected % of Residual in Empty Receptcl</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_retaddress__c</fullName>
        <inlineHelpText>The ship-to address to which the returned receptacles will be sent.</inlineHelpText>
        <label>Return Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_retcarrier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The carrier to be used for returning receptacles.</inlineHelpText>
        <label>Carrier for Returns</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Supplier Part Masters (Carrier for Returns)</relationshipLabel>
        <relationshipName>supitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_returngrosswt__c</fullName>
        <inlineHelpText>The expected gross weight of the returned receptacle with residual (expressed in kilograms).</inlineHelpText>
        <label>Gross Wt of Return Including Resid(kg)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_returnreceptacle__c</fullName>
        <inlineHelpText>Set to &apos;Yes&apos; if receptacle is returnable, otherwise set to &apos;No&apos;. When set to &apos;Yes&apos;, the fields under the Export tab will be enabled and some must be populated.</inlineHelpText>
        <label>Returnable Receptacle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_returnrecorder__c</fullName>
        <inlineHelpText>Yes or No.  Does the supplier require the return of the temperature recorder?</inlineHelpText>
        <label>Return of Temperature Recorder Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_sdssupplied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SDS Supplied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_serialrecordingreqd__c</fullName>
        <inlineHelpText>Yes or No.  Is recording of the receipt serial number required?</inlineHelpText>
        <label>Serial Number recording required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_shipmaxtempc__c</fullName>
        <inlineHelpText>The maximum temperature to be allowed during shipment, expressed in Celsius.</inlineHelpText>
        <label>Shipping Temp Max º C</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_shipmaxtempf__c</fullName>
        <inlineHelpText>The maximum temperature to be allowed during shipment, expressed in Fahrenheit.</inlineHelpText>
        <label>Shipping Temp Max º F</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_shipmintempc__c</fullName>
        <inlineHelpText>The minimum temperature to be allowed during shipment, expressed in Celsius.</inlineHelpText>
        <label>Shipping Temp Min º C</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_shipmintempf__c</fullName>
        <inlineHelpText>The minimum temperature to be allowed during shipment, expressed in Fahrenheit.</inlineHelpText>
        <label>Shipping Temp Min º F</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitem_softwaresupplied__c</fullName>
        <inlineHelpText>Yes or No.  Will supplier provide tool to download software?</inlineHelpText>
        <label>Software Download Tool Supplied</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supitem_sshelflife__c</fullName>
        <inlineHelpText>The Customer&apos;s stated shelf-life (in days) for this WMS item.</inlineHelpText>
        <label>Customer Shelf Life</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>